--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -14,11 +14,11 @@ toc_label: "目录"
 
 # 示例分析
 
-n=1 时，共有1种坐满人的坐法，坐满时的总人数为1，期望=$\frac_{1}{1}=1$
+n=1 时，共有1种坐满人的坐法，坐满时的总人数为1，期望=$\frac{1}{1}=1$
 
-n=2 时，共有2种坐满人的坐法，坐满时的总人数为2，期望=$\frac_{2}{2}=1$
+n=2 时，共有2种坐满人的坐法，坐满时的总人数为2，期望=$\frac{2}{2}=1$
 
-n=3 时，共有3中坐满人的坐法，坐满时的总人数为5，期望=$\frac_{5}{3} \approx 1.67$
+n=3 时，共有3中坐满人的坐法，坐满时的总人数为5，期望=$\frac{5}{3} \approx 1.67$
 > 第一种坐法: 第一个乘客选择中间位置坐，后来乘客按规则，无法选中第一和第三个座位，该坐法共有1人落座。
 > 第二种坐法：第一个乘客选择第一个位置，第二个乘客则只能选择最后一个位置，该坐法共有2人落座。
 > 第三种坐法：第一个乘客选择组后一个位置，第二个乘客则只能选择第一个位置，该坐法共有2人落座。
@@ -26,7 +26,7 @@ n=3 时，共有3中坐满人的坐法，坐满时的总人数为5，期望=$\fr
 从示例易得，期望的计算公式, $h_i(n)$分别为 n 个座位时，第 i 个坐法可以落座的人数, N为坐法的数量
 
 $$
-  E(n) = \frac_{\sum_{i=1}^{N}h_i(n)}{N}
+  E(n) = \frac{\sum_{i=1}^{N}h_i(n)}{N}
 $$
 
 因此，问题的关键是求出座位数量为 n 时的所有坐法数量，以及每种坐法对应的落座人数。
@@ -93,7 +93,7 @@ h_2(n) = h_1(n-1) \\
 f_1(n) = f_2(n-1) * h_1(n) \\
 f_2(n) = f_1(n-1) \\
 
-E(n) = \frac_{f_1(n) \times h_1(n) + f_2(n) \times h_2(n)}{f_1(n) + f_2(n)}
+E(n) = \frac{f_1(n) \times h_1(n) + f_2(n) \times h_2(n)}{f_1(n) + f_2(n)}
 
 $$
 
