--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -19,9 +19,9 @@ n=1 时，共有1种坐满人的坐法，坐满时的总人数为1，期望=$\fr
 n=2 时，共有2种坐满人的坐法，坐满时的总人数为2，期望=$\frac{2}{2}=1$
 
 n=3 时，共有3中坐满人的坐法，坐满时的总人数为5，期望=$\frac{5}{3} \approx 1.67$
-> 第一种坐法: 第一个乘客选择中间位置坐，后来乘客按规则，无法选中第一和第三个座位，该坐法共有1人落座。
-> 第二种坐法：第一个乘客选择第一个位置，第二个乘客则只能选择最后一个位置，该坐法共有2人落座。
-> 第三种坐法：第一个乘客选择组后一个位置，第二个乘客则只能选择第一个位置，该坐法共有2人落座。
+> - 第一种坐法: 第一个乘客选择中间位置坐，后来乘客按规则，无法选中第一和第三个座位，该坐法共有1人落座。
+> - 第二种坐法：第一个乘客选择第一个位置，第二个乘客则只能选择最后一个位置，该坐法共有2人落座。
+> - 第三种坐法：第一个乘客选择组后一个位置，第二个乘客则只能选择第一个位置，该坐法共有2人落座。
 
 从示例易得，期望的计算公式, $h_i(n)$分别为 n 个座位时，第 i 个坐法可以落座的人数, N为坐法的数量
 
