--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -37,8 +37,8 @@ $$
 假如已经知道 n 个座位时的所有坐法，出于临时需要，公交车上在最后临时增加了一个座位（第n+1个座位），该座位能否落座，取决于第n个座位是否有人落座。
 因此，第n个位置（最后一个位置）是否有人落座，需要成为标记子问题的一个变量。
 
-令：$f_1(n)$ 表示 **n个座位时，最后一个座位坐人时的方法数**， $f_2(n)$表示**n个座位时，最后一个座位不坐人时的方法数**
-$h_1(n)$表示 n个座位时，最后一个座位坐人时，可落座的座位数量，$h_2(n)$表示n个座位时，最后一个位置不坐人时，可落座的座位数量。
+令：$f_1(n)$ 表示 **n个座位时，<u>最后一个座位坐人时</u>的方法数**； $f_2(n)$表示**n个座位时，<u>最后一个座位不坐人时</u>的方法数**。
+$h_1(n)$表示 n个座位时，最后一个座位坐人时，可落座的座位数量；$h_2(n)$表示n个座位时，最后一个位置不坐人时，可落座的座位数量。
 
 n=1时：$h_1(1)=1, h_2(1)=0, f_1(1)=1, f_2(1)=0$
 n=2时：$h_1(2)=1, h_2(2)=1, f_1(2)=1, f_2(2)=1$
