--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -52,7 +52,9 @@ n=2时：$h_1(2)=1, h_2(2)=1, f_1(2)=1, f_2(2)=1$
 n_1, n_2 表示第一、第二个座位，第一列标记i=1, i=2 表示第一、第二个坐法，[]表示座位空置，[1]表示该座位被第一个人入座，
 例如，当i=1时，在该坐法下，第一个座位可以坐人，但因为只有该位置可以坐人，所以该只有一种坐法。
 
-n=3时，$h_1(3) = h_2(2) + 1=2, h_2(3) = h_1(2)=1,, f_1(3) = f_2(2) \times h_1(3) = 2, f_2(3)=f_1(2) =1$
+n=3时， 可落座座位数量：$h_1(3) = h_2(2) + 1=2, h_2(3) = h_1(2)=1$,
+
+落座的方法数： $f_1(3) = f_2(2) \times h_1(3) = 2, f_2(3)=f_1(2) =1$
 
 | | $n_1$ | $n_2$ | $n_3$ |
 |:--:| :--: | :--: | :--: |
