--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -38,9 +38,10 @@ $$
 因此，第n个位置（最后一个位置）是否有人落座，需要成为标记子问题的一个变量。
 
 令：$f_1(n)$ 表示 **n个座位时，<u>最后一个座位坐人时</u>的方法数**； $f_2(n)$表示**n个座位时，<u>最后一个座位不坐人时</u>的方法数**。
-$h_1(n)$表示 n个座位时，最后一个座位坐人时，可落座的座位数量；$h_2(n)$表示n个座位时，最后一个位置不坐人时，可落座的座位数量。
+$h_1(n)$表示 **n个座位时，<u>最后一个座位坐人时</u>，可落座的座位数量**；$h_2(n)$表示**n个座位时，<u>最后一个位置不坐人时</u>，可落座的座位数量**。
 
 n=1时：$h_1(1)=1, h_2(1)=0, f_1(1)=1, f_2(1)=0$
+
 n=2时：$h_1(2)=1, h_2(2)=1, f_1(2)=1, f_2(2)=1$
 
 | | $n_1$ | $n_2$ |
@@ -49,7 +50,7 @@ n=2时：$h_1(2)=1, h_2(2)=1, f_1(2)=1, f_2(2)=1$
 |i=2 | [] | [1] |
 
 
-n_1, n_2 表示第一、第二个座位，第一列标记i=1, i=2 表示第一、第二个坐法，[]表示座位空置，[1]表示该座位被第一个人入座，
+$n_1$, $n_2$ 表示第一、第二个座位，第一列标记i=1, i=2 表示第一、第二个坐法，[]表示座位空置，[1]表示该座位被第一个人入座，
 例如，当i=1时，在该坐法下，第一个座位可以坐人，但因为只有该位置可以坐人，所以该只有一种坐法。
 
 n=3时， 可落座座位数量：$h_1(3) = h_2(2) + 1=2, h_2(3) = h_1(2)=1$,
@@ -62,12 +63,12 @@ n=3时， 可落座座位数量：$h_1(3) = h_2(2) + 1=2, h_2(3) = h_1(2)=1$,
 |i=2 | [1] | [] | [2] |
 |i=3 | [2] | [] | [1] |
 
-n=3时，当最后一个位置可以落座时，可落座的状态，只需从n=2时，最后一个位置不可落座时的状态转移过来（将第三个可入座的座位放在第二个不可入座的座位之后），就可满足约束条件。
+n=3时，当最后一个位置可以落座时，可落座的状态，只需从n=2时，最后一个位置不可落座时的状态转移过来（将第三个可入座的座位放在第二个不可入座的座位之后），就可满足约束条件。此时，可落座的位置数量为 $h_2(2) + 1 = 2$。
 
-此时，可落座的位置数量为 $h_2(2) + 1 = 2$。由于第三个位置可以落座，此时第一个用户可以选择第一个座位和第三个座位入座，有两种选择，第二个用户只有一种选择，可落座的方法数量为 2。
-从座位的角度看，新增座位也有两种选择：第一个用户入座，第二个用户入座；**可落座的座位数量也是新增座位的选择数量**，所以$f_1(3)=f_2(2) \times h_1(3) = 2$。
+由于第三个位置可以落座，此时第一个用户可以选择第一个座位和第三个座位入座，有两种选择，第二个用户只有一种选择，可落座的方法数量为 2。
+从座位的角度看，新增座位也有两种选择：第一个用户入座，第二个用户入座；**可落座的座位数量 等价于 新增座位的选择数量**，所以$f_1(3)=f_2(2) \times h_1(3) = 2$。
 
-同理，n=3时，当最后一个位置不可落座时，可落座数量，就是n=2时的最后一个位置可坐人时的可落座数量, 由于没有新的位置可以落座 $f_2(3) = f_1(2)$
+同理，n=3时，当最后一个位置不可落座时, 由于没有新的位置可以落座，此时可落座的座位数量，就是n=2时的最后一个位置可坐人时的可落座数量,  入座的方法数量: $f_2(3) = f_1(2)$
 
 
 | | $n_1$ | $n_2$ | $n_3$ | $n_4$ |
@@ -89,10 +90,11 @@ n=3时，当最后一个位置可以落座时，可落座的状态，只需从n=
 |i=7 | [3] | [] | [1] | [] | [2] |
 |i=8 | [1] | [] | [2] | [] | [1] |
 
-状态转移公式：
+综上分析，得到状态转移公式：
 
 $$
 
+\begin{aligned}
 h_1(n) = h_2(n-1) + 1 \\
 h_2(n) = h_1(n-1) \\
 f_1(n) = f_2(n-1) * h_1(n) \\
@@ -100,6 +102,7 @@ f_2(n) = f_1(n-1) \\
 
 E(n) = \frac{f_1(n) \times h_1(n) + f_2(n) \times h_2(n)}{f_1(n) + f_2(n)}
 
+\end{aligned}
 $$
 
 # 代码
