--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -107,7 +107,7 @@ $$
 
 # 代码
 
-```c++
+```cpp
 double solve(int n) {
     vector<int> h1(n+1), h2(n+1); // 最后一个位置坐人/不坐人的可坐座位数量
     vector<int> f1(n+1), f2(n+1); // 最后一个位置坐人/不坐人的方法数
@@ -118,7 +118,7 @@ double solve(int n) {
     h1[2] = 1; h2[2] = 1;
     f1[2] = 1; f2[2] = 1;
     if (n==1 || n==2) {
-        return (h1[n] * f1[n] + h2[n]*f2[n]);
+        return (h1[n] * f1[n] + h2[n]*f2[n])*1. / (f1[n] + f2[n]);
     }
     for(int i=3; i<=n; ++i) {
         h1[i] = h2[i-1] + 1; h2[i] = h1[i-1];
@@ -127,5 +127,31 @@ double solve(int n) {
     return (f1[n] * h1[n] + f2[n] * h2[n]) * 1. / (f1[n]+f2[n]);
 }
 ```
-```
+```cpp
+// 状态压缩
+double solve(int n) {
+    int h1, h2; // 最后一个位置坐人/不坐人的可坐座位数量
+    int f1, f2; // 最后一个位置坐人/不坐人的方法数
+    if(n<1) return -1; // invalid
+    // n=1时
+    if (n== 1) {
+       h1 = 1; h2 = 0;
+       f1 = 1; f2 = 0;
+    }
+    if (n==2) {
+       h1 = 1; h2 = 1;
+       f1 = 1; f2 = 1;
+    }
+    if (n==1 || n==2) {
+        return (h1 * f1 + h2 * f2)*1. / (f1 + f2);
+    }
+    for(int i=3; i<=n; ++i) {
+        int old_h1 = h1;
+        h1 = h2 + 1; h2 = old_h1;
+        int old_f1 = f1;
+        f1= f2 * h1; f2 = old_f1;
+    }
+    return (f1 * h1 + f2 * h2) * 1. / (f1+f2);
+}
+
 ```
