--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -94,15 +94,15 @@ n=3时，当最后一个位置可以落座时，可落座的状态，只需从n=
 
 $$
 
-\begin{aligned}
-h_1(n) = h_2(n-1) + 1 \\
-h_2(n) = h_1(n-1) \\
-f_1(n) = f_2(n-1) * h_1(n) \\
-f_2(n) = f_1(n-1) \\
+\begin{align*}
+& h_1(n) = h_2(n-1) + 1 \\
+& h_2(n) = h_1(n-1) \\
+& f_1(n) = f_2(n-1) * h_1(n) \\
+& f_2(n) = f_1(n-1) \\
 
-E(n) = \frac{f_1(n) \times h_1(n) + f_2(n) \times h_2(n)}{f_1(n) + f_2(n)}
+& E(n) = \frac{f_1(n) \times h_1(n) + f_2(n) \times h_2(n)}{f_1(n) + f_2(n)}
 
-\end{aligned}
+\end{align*}
 $$
 
 # 代码
