--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -65,7 +65,7 @@ n=3时, 落座方案数和可落座状态
 n=3时，当最后一个位置可以落座时，可落座的状态，只需从n=2时，最后一个位置不可落座时的状态转移过来（将第三个可入座的座位放在第二个不可入座的座位之后），就可满足约束条件。此时，可落座的位置数量为 h_1(3) = $h_2(2) + 1 = 2$。
 
 由于第三个位置可以落座，此时第一个用户可以选择第一个座位和第三个座位入座，有两种选择，第二个用户只有一种选择，可落座的方法数量为 2。
-从座位的角度看，新增座位也有两种选择：第一个用户入座，第二个用户入座；**可落座的座位数量 等价于 新增座位的选择数量**，所以$f_1(3)=f_2(2) \times h_1(3) = 2$。
+从座位的角度看, 新增座位后有两个座位可入座，所以新增座位也有两种选择：第一个用户入座，第二个用户入座；**可落座的座位数量 等价于 新增座位的选择数量**，所以$f_1(3)=f_2(2) \times h_1(3) = 2$。
 
 同理，n=3时，当最后一个位置不可落座时, 由于没有新的位置可以落座，此时可落座的座位数量，就是n=2时的最后一个位置可坐人时的可落座数量: $h_2(3) = h_1(2) = 1$,  入座的方法数量: $f_2(3) = f_1(2)$
 
