--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -30,7 +30,7 @@ $$
   E(n) = \frac{\sum_{i=1}^{N}h_i(n)}{N}
 $$
 
-因此，问题的关键是求出座位数量为 n 时的所有坐法数量，以及每种坐法对应的落座人数。
+因此，**问题的关键**是求出座位数量为 n 时的所有坐法数量，以及每种坐法对应的落座人数。
 
 # 子问题
 
