--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -34,8 +34,8 @@ $$
 
 # 子问题
 
-假如已经知道 n 个座位时的所有坐法，出于临时需要，公交车上在最后临时增加了一个座位（第n+1个座位），该座位能否落座，取决于第n个座位是否有人落座。
-因此，第n个位置（最后一个位置）是否有人落座，需要成为标记子问题的一个变量。
+假如已经知道 n 个座位时的所有坐法，出于临时需要，公交车上在最后临时增加了一个座位（第n+1个座位），由于规则的限制：落座的前后无法入座，新增的第n+1个座位能否落座，取决于第n个座位是否有人落座。
+因此，第n个位置（最后一个位置）是否有人落座，需要成为标记子问题的一个变量或者状态，子问题的状态值是其因变量。
 
 令：$f_1(n)$ 表示 **n个座位时，<u>最后一个座位坐人时</u>的方法数**； $f_2(n)$表示**n个座位时，<u>最后一个座位不坐人时</u>的方法数**。
 $h_1(n)$表示 **n个座位时，<u>最后一个座位坐人时</u>，可落座的座位数量**；$h_2(n)$表示**n个座位时，<u>最后一个位置不坐人时</u>，可落座的座位数量**。
