add other solution

--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -9,7 +9,7 @@ toc_sticky: true
 toc_label: "目录"
 ---
 
-公交车上有一排 n 个座位，这一排的 n 个座位有个规定：乘客选中落座的前后位置，不允许坐人。乘客依次上车，随机选座，求这个n个座位坐满人的期望。
+公交车上有一排 n 个座位，这一排的 n 个座位有个规定：乘客选中落座的前后位置，不允许坐人。即如果某位置的相邻位置有其他乘客，则该座位不会被选择。1 号座位与 2 号相邻，n 号座位与 n-1 号相邻，除了 1 号与 n 号座位，任意 i 号座位都与 i-1 和 i+1 号座位相邻。乘客源源不断的依次上车，随机选符合规定的座位，求这个n个座位坐满人的期望。
 
 
 # 示例分析
@@ -160,6 +160,72 @@ double solve(int n) {
 }
 
 ```
+
+
+# 其他解法
+
+[地铁上一排n个座位坐满人的期望](https://blog.csdn.net/qq_45928501/article/details/115313751) （最后f(n)的递推公式少了系数2）
+
+令：$f(n)$为座位数量为n时候的期望
+n个座位时，第一个人上车，有n种类选择：
+
+选择第一个位置时，期望=$\frac{1}{n}(1 + f(n-2))$
+
+选择第二个位置时，期望=$\frac{1}{n}(1 + f(n-3))$
+
+选择第三个位置时，期望=$\frac{1}{n}(1 + f(n-4) + f(1))$
+
+选择第四个位置时，期望=$\frac{1}{n}(1 + f(n-5) + f(2))$
+
+...
+
+选择第n-2个位置时，期望=$\frac{1}{n}(1+f(1)+f(n-4))$
+
+选择第n-1个位置时，期望=$\frac{1}{n}(1+f(2)+f(n-5))$
+
+选择第n个位置时，期望=$\frac{1}{n}(1+f(n-2))$
+
+
+将选择所有位置的期望相加: $f(n) = \frac{2}{n}(f(1) + f(2) + ... + f(n-2)) + 1$
+
+```cpp
+
+double solve(int n) {
+  vector<double> f(n+1);
+	f[0]=0,f[1]=1,f[2]=1;
+
+	for(int i=3;i<=n;i++)
+	{
+	  double sum = 0;
+		for(int k=1; k<=i-2; ++k){
+		    sum += f[k];
+		}
+		
+		f[i] = ((2. / i ) * sum) + 1.;	
+	}
+  return f[n];
+}
+```
+
+
+# 两种解法结果不一致原因分析
+
+比较两种解法在n取不同值的时候的结果
+
+| | 第一种 | 第二种 |
+|:--: |:--: |:--: |
+| n=3 | 1.667 | 1.667 |
+| n=4| 2 | 2 |
+| n=5| 2.75 | 2.467 |
+| n=6| 3 | 2.88889 |
+| n=7| 3.8 | 3.32381 |
+| n=8| 4 | 3.75556 |
+| n=9| 4.8333 | 4.18801 |
+
+
+**为什么两种解法不一致？？**
+
+
 
 
 # 后记
