--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -166,7 +166,7 @@ double solve(int n) {
 
 [地铁上一排n个座位坐满人的期望](https://blog.csdn.net/qq_45928501/article/details/115313751) （最后f(n)的递推公式少了系数2）
 
-令：$f(n)$为座位数量为n时候的期望
+令：$f(n)$为座位数量为n时候的期望,
 n个座位时，第一个人上车，有n种类选择：
 
 选择第一个位置时，期望=$\frac{1}{n}(1 + f(n-2))$
