--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -9,7 +9,7 @@ toc_sticky: true
 toc_label: "目录"
 ---
 
-公交车上有一排 n 个座位，这一排的 n 个座位有个规定：乘客选中落座的前后位置，不允许坐人。即如果某位置的相邻位置有其他乘客，则该座位不会被选择。1 号座位与 2 号相邻，n 号座位与 n-1 号相邻，除了 1 号与 n 号座位，任意 i 号座位都与 i-1 和 i+1 号座位相邻。乘客源源不断的依次上车，随机选符合规定的座位，求这个n个座位坐满人的期望。
+公交车上有一排 n 个座位，这一排的 n 个座位有个规定：乘客选中落座的前后位置，不允许坐人。即如果某位置的相邻位置有其他乘客，则该座位不会被选择。1 号座位与 2 号相邻，n 号座位与 n-1 号相邻，除了 1 号与 n 号座位，任意 i 号座位都与 i-1 和 i+1 号座位相邻。乘客源源不断的依次上车，每次上一人，随机选符合规定的座位，求这个n个座位坐满人的期望。
 
 
 # 示例分析
