--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -226,12 +226,13 @@ double solve(int n) {
 **为什么两种解法不一致？？**
 
 在第一种解法中，第 n 个座位时的**入座方法数状态**只考虑从第 n-1 座位时的**入座方法数状态**转移过来，无形中添加了**顺序**的限制，这样其实限制了乘客选择座位的顺序。例如当n=5时，第一个乘客选择了座位1，第二个乘客按照顺序选择，则只能选择座位3，而不能选择座位4、座位5。
-针对这个问题，选择在有$x$个座位可入座时，引入全排列$x!$，即：$f_1(n)=f_2(n-1) \times h_1(n), f_2(n) = f_1(n-1)$。
+针对这个问题，选择在有$x$个座位可入座时，引入全排列$x!$，即：$f_1(n)=f_2(n-1) \times h_1(n), f_2(n) = f_1(n-1)$，顺序的问题算是解决了。
 
-在第一种解法中，只考虑了**相邻入座乘客间隔1个空座**的情况，这相当于求解<u>n个座位***最多**可入乘客的期望</u>。
+在第一种解法中，只考虑了**相邻入座乘客间隔1个空座**的情况，这相当于求解<u>n个座位**最多**可入乘客的期望</u>。
 题目中没有这样限制条件，因此，第一种解法中少考虑了**相邻入座乘客间隔2个空座** 以及 同时存在**间隔1个空座、2个空座**的情况。
-只考虑**相邻入座乘客间隔1个空座**时，最后一个位置是否入座可以将可入座座位数量分成两类，每一类中可入座数量相同。当考虑间隔两个空座时，$h_1(n), h_2(n)$
-则不够用了，$x$个间隔2个空座的情况 x $y$ 个间隔1个空座的情况，组合数量太多，分析过于繁琐。
+
+只考虑相邻入座乘客间隔1个空座**时，最后一个位置是否入座可以将可入座座位数量分成两类，每一类中可入座数量相同。当考虑间隔两个空座时，$h_1(n), h_2(n)$
+则不够用了，$x$个间隔2个空座的情况  X  $y$ 个间隔1个空座的情况，组合数量太多，分析过于繁琐。
 
 比如，只要能满足前后无人的要求，第 n 个状态也能从第n-2个状态、第n-3个状态转移出来。例如,当n=5时，当第五个座位可以坐人时，可以从 n = 3、n=2时的状态转移过来，此时，n=2状态下的最后一个可入座座位
 和第5个座位之间的座位是否可入座，依赖第五个座位和n=2时最后一个可入座座位的位置序号，当选择他们中间的某个合法位置落座时，可落座的区间变成了两个，这样的分析起来非常复杂。
