--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -234,7 +234,7 @@ double solve(int n) {
 只考虑相邻入座乘客间隔1个空座**时，最后一个位置是否入座可以将可入座座位数量分成两类，每一类中可入座数量相同。当考虑间隔两个空座时，$h_1(n), h_2(n)$
 则不够用了，$x$个间隔2个空座的情况  X  $y$ 个间隔1个空座的情况，组合数量太多，分析过于繁琐。
 
-比如，只要能满足前后无人的要求，第 n 个状态也能从第n-2个状态、第n-3个状态转移出来。例如,当n=5时，当第五个座位可以坐人时，可以从 n = 3、n=2时的状态转移过来，此时，n=2状态下的最后一个可入座座位
+比如，在满足前后无人的要求下，第 n 个状态也能从第n-3个状态转移出来。例如,当n=5时，当第五个座位可以坐人时，从n=2时的状态转移过来，此时，n=2状态下的最后一个可入座座位
 和第5个座位之间的座位是否可入座，依赖第五个座位和n=2时最后一个可入座座位的位置序号，当选择他们中间的某个合法位置落座时，可落座的区间变成了两个，这样的分析起来非常复杂。
 
 
