--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -231,7 +231,7 @@ double solve(int n) {
 在第一种解法中，只考虑了**相邻入座乘客间隔1个空座**的情况，这相当于求解<u>n个座位**最多**可入乘客的期望</u>。
 题目中没有这样限制条件，因此，第一种解法中少考虑了**相邻入座乘客间隔2个空座** 以及 同时存在**间隔1个空座、2个空座**的情况。
 
-只考虑相邻入座乘客间隔1个空座**时，最后一个位置是否入座可以将可入座座位数量分成两类，每一类中可入座数量相同。当考虑间隔两个空座时，$h_1(n), h_2(n)$
+只考虑相邻入座乘客间隔1个空座时，最后一个位置是否入座可以将可入座座位数量分成两类，每一类中可入座数量相同。当考虑间隔两个空座时，$h_1(n), h_2(n)$
 则不够用了，$x$个间隔2个空座的情况  X  $y$ 个间隔1个空座的情况，组合数量太多，分析过于繁琐。
 
 比如，在满足前后无人的要求下，第 n 个状态也能从第n-3个状态转移出来。例如,当n=5时，当第五个座位可以坐人时，从n=2时的状态转移过来，此时，n=2状态下的最后一个可入座座位
