fix code format

--- a/_posts/2024-09-17-N个座位坐满人的期望.md
+++ b/_posts/2024-09-17-N个座位坐满人的期望.md
@@ -192,17 +192,14 @@ n个座位时，第一个人上车，有n种类选择：
 
 double solve(int n) {
   vector<double> f(n+1);
-	f[0]=0,f[1]=1,f[2]=1;
-
-	for(int i=3;i<=n;i++)
-	{
+  f[0]=0,f[1]=1,f[2]=1;
+  for(int i=3;i<=n;i++) {
     double sum = 0;
     for(int k=1; k<=i-2; ++k){
       sum += f[k];
-    }
-		
-		f[i] = ((2. / i ) * sum) + 1.;	
-	}
+    }	
+    f[i] = ((2. / i ) * sum) + 1.;	
+  }
   return f[n];
 }
 ```
